<resources>
    <string name="app_name">SmartApp</string>
    <string name="app_country_code_number_prefix">+91</string>
    <string name="app_facebook_id">458473234536555</string>
    <string name="server_client_id">l4njpB7uNDnkft3fedsm4nKL</string>

    <!-- TODO : SplashScreenActivity strings -->
    <string name="splash_screen_text">Welcome To Smart App</string>

    <!-- TODO : SelectLanguageActivity strings -->

    <string name="select_language_text">Select Your Language:</string>
    <string name="select_language_marathi_text">Marathi</string>
    <string name="select_language_english_text">English</string>
    <string name="select_language_button_text">Next</string>

    <!-- ToDO : LoginActivity strings -->

    <string name="login_activity_username_text">Enter Username*</string>
    <string name="login_activity_password_text">Enter Password*</string>
    <string name="login_activity_forgot_password_text">Forgot Password</string>
    <string name="login_activity_login_button_text">Login</string>
    <string name="login_activity_create_account_text_view_text">Create Account</string>
    <string name="login_activity_username_text_view_error">Please enter valid username</string>
    <string name="login_activity_password_text_view_error">Please enter valid password</string>
    <string name="login_activity_error_toast_message">Invalid username or password</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="login_with_google">Login With Google+</string>

    <!-- ToDO : ForgotPasswordActivity strings -->
    <string name="forgot_password_activity_action_bar_name">Forgot Password</string>
    <string name="forgot_password_activity_mobile_no_text">Enter Mobile Number*</string>
    <string name="forgot_password_activity_submit_button_text">Submit</string>
    <string name="forgot_password_activity_error_message_snack_bar_text">Something went wrong.Please try again</string>
    <string name="forgot_password_activity_mobile_no_error_text">Invalid Mobile Number.Please Enter Valid Mobile Number</string>

    <!-- TODO : Registration Activity -->

    <string name="registration_activity_label">Create Account</string>
    <string name="registration_activity_first_name_text_view_text">First Name*</string>
    <string name="registration_activity_middle_name_text_view_text">Middle Name</string>
    <string name="registration_activity_last_name_text_view_text">Last Name*</string>
    <string name="registration_activity_email_text_view_text">Email*</string>
    <string name="registration_activity_mobile_no_text_view_text">Mobile No*</string>
    <string name="registration_activity_gender_text_view_text">Gender*</string>
    <string name="registration_activity_gender_male_text">Male</string>
    <string name="registration_activity_gender_female_text">Female</string>
    <string name="registration_activity_gender_transgender_text">Transgender</string>
    <string name="registration_activity_emergency_contact_text_view_text">Emergency Contact*</string>
    <string name="registration_activity_register_button_text">Register</string>

    <!-- Registration Activity Validation Messages -->

    <string name="first_name_error_message">Please enter valid First Name</string>
    <string name="middle_name_error_message">Please enter valid Middle Name</string>
    <string name="last_name_error_message">Please enter valid Last Name</string>
    <string name="email_error_message">Please enter valid Email</string>
    <string name="mobile_number_error_message">Please enter valid Mobile Numbet</string>
    <string name="emergency_contact_error_message">Please enter valid emergency Contact</string>

    <string name="registration_success">Registered Successfully</string>
    <string name="registration_failure">Registeration failed</string>


    <!-- TODO : DrawerLayout Strings -->

    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="nav_drawer_change_password_menu">Change Password</string>
    <string name="nav_drawer_fragments_menu">Fragments</string>
    <string name="nav_drawer_logout_menu">Logout</string>

    <!-- TODO : DashboardActivity Labels -->

    <string name="dashboard_activity_label">Dashboard</string>

    <!-- TODO : Change Password -->
    <string name="change_password_fragment_title">Change Password</string>
    <string name="change_password_fragment_current_password_text_view_text">Current Password</string>
    <string name="change_password_fragment_new_password_text_view_text">New Password</string>
    <string name="change_password_fragment_confirm_password_text_view_text">Confirm Password</string>
    <string name="change_password_fragment_submit_button_text">Submit</string>

    <!-- Cgange Password Error Messages -->

    <string name="change_password_fragment_current_password_error_message">Current Password required</string>
    <string name="change_password_fragment_new_password_error_message">New Password required</string>
    <string name="change_password_fragment_confirm_password_error_message">Password required</string>
    <string name="change_password_fragment_password_do_not_matched_error_message">Password do not matched</string>

    <!-- TODO : Logout Dialog -->

    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Are you sure you want to logout?</string>
    <string name="logout_dialog_positive_button_text">Yes</string>
    <string name="logout_dialog_negative_dialog_button">No</string>


</resources>
